--- a/client/src/Views/ML/style.css
+++ b/client/src/Views/ML/style.css
@@ -1,3 +1,11 @@
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .ant-list::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
@@ -10,15 +18,7 @@
   font-size: 11px !important;
 }
 
-#dataset-control-panel {
-  padding: 0;
-}
-#dataset-control-panel .card-header {
-  padding: 1rem;
-}
-#dataset-control-panel .card-title {
+.card-title {
   width: 100%;
-}
-#dataset-control-panel .col-xl-3 {
   padding: 0;
 }
