--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -64,5 +64,6 @@ File: style.css
 
 @import "partials/layouts/dark";
 @import "partials/layouts/rtl";
+@import "partials/extra";
 
 // @import "partials/third-party/third-party";
